--- a/gaj-text-analyser/.classpath
+++ b/gaj-text-analyser/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="src" path="/gaj-iterators"/>
 	<classpathentry kind="lib" path="lib/tagsoup-1.2.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.jdt.annotation_2.0.100.v20140817-1401.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
