Bug fixes and code cleanup.

--- a/gaj-dependency-analyser/.classpath
+++ b/gaj-dependency-analyser/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/gaj-dependency-manager"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gaj-iterators"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gaj-classbinary"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
