--- a/gaj-text-analyser/.classpath
+++ b/gaj-text-analyser/.classpath
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" output="bin-test" path="test"/>
-	<classpathentry kind="src" path="/gaj-iterators"/>
-	<classpathentry kind="lib" path="lib/tagsoup-1.2.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/org.eclipse.jdt.annotation_2.0.100.v20140817-1401.jar"/>
-	<classpathentry kind="output" path="bin"/>
+  <classpathentry kind="src" path="test" output="target/test-classes" including="**/*.java"/>
+  <classpathentry kind="src" path="src" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/gaj/tools/iterators/gaj-iterators/0.0.1-SNAPSHOT/gaj-iterators-0.0.1-SNAPSHOT.jar"/>
 </classpath>
