--- a/gaj-data-analysis/.classpath
+++ b/gaj-data-analysis/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" output="test-bin" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="org.eclipse.jdt.annotation_2.1.0.v20160418-1457.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
